fix: chat overflow x auto on list of connections chats

--- a/app/components/chat.module.css
+++ b/app/components/chat.module.css
@@ -1,17 +1,10 @@
 
-.parentContainer::-webkit-scrollbar {
-    display: none;
-  }
 
 
   .childContainer {
     overflow-x: auto;
     white-space: nowrap;
-  }
-
-  .childContainer::-webkit-scrollbar {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;
+    display: flex;
   }
 
   .containerEmptyState {
